# wei-infer

./: CMakeLists.txt  readme.md
cmake/: torch.cmake
demo/: main.cpp
note/: 02_Tensor实现.md  03_算子实现.md  04_Layer实现.md
test/: CMakeLists.txt  test_torch.cpp  utils.cuh
test/test_ops/: test_fmha.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
wei/include/base/: alloc.h  base.h  buffer.h
wei/include/model/: config.h  llama2.h  model.h  raw_model_data.h
wei/include/ops/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
wei/include/sampler/: argmax_sampler.h  sampler.h
wei/include/tensor/: tensor.h
wei/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  buffer.cpp
wei/source/model/: llama2.cpp  model.cpp  raw_model_data.cpp
wei/source/ops/: layer.cpp  rmsnorm_kernel.cu  rmsnorm_kernel.cuh
wei/source/ops/kernels/: kernels_interface.h  kernels_interfaces.cpp
wei/source/ops/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
wei/source/ops/kernels/cuda/: add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cuh  fmha_kernel.cu  fmha_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  (+5 more)
wei/source/sampler/: argmax_sampler.cpp
wei/source/tensor/: tensor.cpp
